cabal-version:       2.2

build-type:          Simple

--------------------------------------------------

name:                mtg-types
version:             0.0.0
                     -- ^ ❲ A.B.C.D ❳:
                     --
                     -- • ❲ A.B ❳ — the MajorVersion
                     -- • ❲ C ❳   — the MinorVersion
                     -- • ❲ D ❳   — a PatchVersion

-- x-revision:          1

--------------------------------------------------
-- Description -----------------------------------
--------------------------------------------------

synopsis: Types for Magic The Gathering

category: MTG

--------------------------------------------------

description: Types for Magic The Gathering.
             .
             @mtg-types@ is a /reverse dependency/ for these packages:
             .
             * @mtg-json@
             * @mtg-csv@
             * @mtg-sql@
             * @mtg-scryfall@
             .

--------------------------------------------------

author:              Spiros Boosalis
maintainer:          Spiros Boosalis <samboosalis@gmail.com>

--------------------------------------------------
-- Portability -----------------------------------
--------------------------------------------------

stability: provisional

--------------------------------------------------

tested-with: GHC   == 8.6.4
           , GHC   == 8.4.4

--------------------------------------------------
-- Licensing -------------------------------------
--------------------------------------------------

license:             GPL-3.0-or-later
license-file:        LICENSE
copyright:           2019 Spiros Boosalis

--------------------------------------------------
-- (Non-Code) Files ------------------------------
--------------------------------------------------

extra-source-files: LICENSE
                    README.md
                    CHANGELOG.md

--------------------------------------------------
            
data-dir: data

data-files: *.txt

--------------------------------------------------
-- Repository ------------------------------------
--------------------------------------------------

homepage:    https://github.com/sboosali/mtg#readme
bug-reports: https://github.com/sboosali/mtg/issues

--------------------------------------------------

source-repository head
  type:     git
  location: git://github.com/sboosali/mtg.git
  subdir:   ./mtg-types

--------------------------------------------------
-- Flags -----------------------------------------
--------------------------------------------------

flag develop

  default:     False

  description: Exposed internals and/or dynamic typechecking (for development).

  manual:      True

--------------------------------------------------
-- Common Stanzas --------------------------------
--------------------------------------------------

common Haskell2020Library

 -----------------------------
 --TODO cross-platform template...

 -- if   os(linux)
 -- --   linux-only:
 -- --   ...
 -- elif os(windows)
 -- --   windows-only:
 -- --   ...
 -- elif os(darwin)
 -- --   mac-only:
 -- --   ...

 -- -- ^ See « System.Info.os ».
 -- -- ^ NOTE « os(windows) » canonicalizes « os(mingw32) », « os(cygwin32) », etc.

 -----------------------------
 --TODO cross-platform template...

 -- if   arch(x86_64)
 -- --   64-bit-only:
 -- --   ...
 -- elif arch(i386)
 -- --   32-bit-only:
 -- --   ...

 -- -- ^ See « System.Info.arch ».

 -----------------------------

 default-language: Haskell2010

 -----------------------------

 build-depends: base >=4.10 && <5
--build-depends: base-noprelude >=4.10 && <5

 -----------------------------

 ghc-options:

  --------------------
  -- warning groups
  --------------------

             -Wall

  --------------------
  -- disabled warnings
  --------------------

  --------------------
  -- enabled warnings
  --------------------

             -fwarn-name-shadowing
             -fwarn-tabs

  --------------------
  -- (miscellaneous warnings)
  --------------------

  -- raise a warning into an error
  -- -Werror=missing-fields

 -----------------------------

 if impl(ghc >= 7.10)
    ghc-options:

        --------------------
        -- disabled warnings
        --------------------

                -fno-warn-unticked-promoted-constructors
                -- ^ NOTE « -fno-warn-... » is the old style,
                --        « -Wno-... » is the new style.

 -----------------------------

 if impl(ghc >= 8.0)
    ghc-options:

        --------------------
        -- warning groups
        --------------------

                -Wcompat

        --------------------
        -- disabled warnings
        --------------------

                -Wno-unticked-promoted-constructors
         --TODO -fno-warn-redundant-constraints

        --------------------
        -- enabled warnings
        --------------------

                -Wnoncanonical-monad-instances
                -Wnoncanonical-monadfail-instances

                -Wincomplete-record-updates
                -Wincomplete-uni-patterns

                -Wmissing-methods
                -Widentities

                -- -Wmissing-exported-signatures
                -- -Whi-shadowing

        --------------------

                -Wtyped-holes

 -----------------------------

 if flag(develop)
 
    cpp-options: -DDEVELOP
                 -- ^ Define the « DEVELOP » symbol for CPP.

 -----------------------------

 if flag(develop) && impl(ghc >= 8.0)
 
    ghc-options: -fdefer-typed-holes
                 -- ^ Use `typed-holes`, not `undefined`, during development.

 -----------------------------

 if impl(ghc >= 8.2)
    ghc-options:

        --------------------
        -- enabled warnings
        --------------------

                -Wcpp-undef

                -Wmissing-home-modules

                -Wunbanged-strict-patterns

 -----------------------------

 default-extensions:

   --------------------
   -- "controversial"
   --------------------
                    NoImplicitPrelude

   --------------------
   -- `deriving`
   --------------------
                    AutoDeriveTypeable
                    DeriveDataTypeable
                    DeriveGeneric
                    DeriveFunctor
                    DeriveFoldable
                    DeriveTraversable
                    StandaloneDeriving
--TODO

   --------------------
   -- syntax
   --------------------
                    PackageImports
                    LambdaCase
                    EmptyCase
                    TypeOperators
                    PostfixOperators
                    BangPatterns
                    KindSignatures
                    NamedFieldPuns
                    RecordWildCards
                    TupleSections
                    MultiWayIf
                    DoAndIfThenElse
                    EmptyDataDecls
                    InstanceSigs

   --------------------
   -- typeclasses
   --------------------
                    MultiParamTypeClasses
                    FlexibleContexts
                    FlexibleInstances
                    TypeFamilies
                    FunctionalDependencies
                    ConstrainedClassMethods

   --------------------
   -- patterns
   --------------------
                    ViewPatterns
                    PatternSynonyms

   --------------------
   -- (miscellaneous)
   --------------------
                    ScopedTypeVariables

 -----------------------------

 other-extensions:

   --------------------
   -- macros
   --------------------
                  CPP
   --               TemplateHaskell
   --               QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
                  OverloadedStrings
                  OverloadedLists

   --------------------
   -- (miscellaneous)
   --------------------

   -- RebindableSyntax
   -- kinds:
   -- DataKinds ConstraintKinds
   -- harmful to inference:
   -- GADTs RankNTypes
   -- (miscellaneous)

 -----------------------------

 if impl(ghc >= 7.2)

    default-extensions: DeriveLift

 -----------------------------

 if impl(ghc >= 7.10)

    other-extensions: DeriveAnyClass

 -----------------------------

 if impl(ghc >= 8.0)

    default-extensions: DuplicateRecordFields

    other-extensions:   TemplateHaskellQuotes

 -----------------------------

 if impl(ghc >= 8.4)

    default-extensions: DerivingStrategies
                      , DeriveAnyClass
                      , GeneralizedNewtypeDeriving

 -----------------------------

 if impl(ghc >= 8.6)

    default-extensions: StarIsType
                      , BlockArguments

    -- ^ Enabling « StarIsType » is necessary for forwards-compatibility.
    --
    --   Using « :: * -> * » versus « :: Type -> Type » is necessary
    --   for backwards-compatibility.
    --
    --   "Before GHC 8.0: the only way to refer to the kind of lifted types was the * syntax."
    --
    --   See « https://github.com/ghc-proposals/ghc-proposals/blob/master/proposals/0030-remove-star-kind.rst ».

 -----------------------------

 other-extensions:

   --------------------
   -- macros
   --------------------
                  TemplateHaskell
   -- QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
                  OverloadedStrings
                  OverloadedLists

   --------------------
   -- (miscellaneous)
   --------------------

   -- RebindableSyntax
   -- kinds:
   -- DataKinds ConstraintKinds
   -- harmful to inference:
   -- GADTs RankNTypes
   -- (miscellaneous)

--------------------------------------------------
-- Library ---------------------------------------
--------------------------------------------------

library

------------------------------

 import: Haskell2020Library

------------------------------

 hs-source-dirs: library
  
 ------------------------------

 exposed-modules: MTG.Types
                , MTG.Types.Errors

                ---------------

                , MTG.Classes.Parse
                , MTG.Classes.Print

                ---------------

                , MTG.Enum.Color

                ---------------

                , MTG.Number.CMC

                ---------------

                , MTG.Text.List.Colors
                , MTG.Text.List.ManaCost

                , MTG.Text.Artist
                , MTG.Text.Block
                , MTG.Text.Border
                , MTG.Text.Cardtype
                , MTG.Text.Color
                , MTG.Text.Edition
                , MTG.Text.Format
                , MTG.Text.Frame
                , MTG.Text.Keyword
                , MTG.Text.Language
                , MTG.Text.Layout
                , MTG.Text.Legality
                , MTG.Text.ManaSymbol
                , MTG.Text.Name
                , MTG.Text.Rarity
                , MTG.Text.Subtype
                , MTG.Text.Supertype
                , MTG.Text.Symbol
                , MTG.Text.Watermark

                ---------------

                , MTG.Types.Prelude
                , MTG.Classes.Prelude

 -----------------------------

 build-depends:

  --------------------
  -- My Libraries ----
  --------------------

               spiros    ^>= 0.4
--           , enumerate ^>= 0.3

  --------------------
  -- Standard Library
  --------------------

             , text             
             , bytestring
             , transformers
             , containers

  --------------------
  -- "Extended" Library
  --------------------

             , deepseq
             , hashable

  --------------------
  -- Records ---------
  --------------------

             , lens         ^>= 4.17
             , generic-lens ^>= 1.1

  --------------------
  -- Printing --------
  --------------------

             , prettyprinter               ^>= 1.2
             , prettyprinter-ansi-terminal ^>= 1.1
             , formatting                  ^>= 6.3

  --------------------
  -- Parsing ---------
  --------------------

             , parsers    ^>= 0.12
             , trifecta   ^>= 2
             , attoparsec ^>= 0.13
             , charset    ^>= 0.3

  --------------------
  -- (Miscellaneous) -
  --------------------

--------------------------------------------------
-- Tests -----------------------------------------
--------------------------------------------------

test-suite doc

 import: Haskell2020Library

 -----------------------------

 hs-source-dirs: ./test

 main-is:        DocTests.hs

 -----------------------------

 build-depends: base
              , mtg-types

              ----------------

              , doctest

 -----------------------------

 type: exitcode-stdio-1.0


--------------------------------------------------
-- EOF -------------------------------------------
--------------------------------------------------